# syslog-loose

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: benchmark.yml  main.yml
benches/: bench.rs
benches/rfc3164/: long_msg.txt  rfc3339_timestamp.txt  simple.txt  with_structured_data.txt
benches/rfc5424/: with_structured_data.txt  with_structured_data_escaped.txt  with_structured_data_long_msg.txt  without_structured_data.txt  without_structured_data_long_msg.txt
dev/bench/: data.js
examples/parser/: main.rs
examples/server/: main.rs
src/: error.rs  header.rs  lib.rs  message.rs  non_empty_string.rs  parsers.rs  pri.rs  procid.rs  rfc3164.rs  rfc5424.rs  structured_data.rs  timestamp.rs
tests/: non_empty_string.rs  quickcheck.rs  tests.rs
