[package]
name = "syslog_loose"
version = "0.9.0"
authors = ["Stephen Wakely <fungus.humungus@gmail.com>"]
description = "A loose parser for syslog messages."
license = "MIT"
repository = "https://github.com/FungusHumungus/syslog-loose"
documentation = "https://docs.rs/syslog_loose/"
keywords = ["syslog", "logs", "logging"]
readme = "README.md"
edition = "2018"

[dependencies]
nom = "6"
chrono = "0.4"

[dev-dependencies]
criterion = "0.3.0"
syslog_rfc5424 = "0.6.1"
quickcheck = "0.9.2"
rand = "0.7"
quickcheck_macros = "0.9.1"

[[example]]
name = "server"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
