[package]
name = "syslog_loose"
version = "0.17.0"
authors = ["Stephen Wakely <fungus.humungus@gmail.com>"]
description = "A loose parser for syslog messages."
license = "MIT"
repository = "https://github.com/FungusHumungus/syslog-loose"
documentation = "https://docs.rs/syslog_loose/"
keywords = ["syslog", "logs", "logging"]
categories = ["parser-implementations"]
readme = "README.md"
edition = "2018"

[dependencies]
nom = "7"
chrono = "0.4"

[dev-dependencies]
chrono-tz = "0.5"
criterion = "0.3.4"
criterion-cycles-per-byte = "0.1.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[[example]]
name = "server"

[[example]]
name = "parser"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[profile.release]
debug = true

[features]
quickcheck = []